--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,6 +8,8 @@
 
 :root {
   --bg-color-header: #000;
+  --bg-color-club: #000;
+  --bg-color-team: #5036e6;
   --text-color: #fff;
   --button-color: #009465;
   --button-hover-color: #066C4C;
