--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,9 @@
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/button/button.css);
+@import url(../blocks/title/title.css);
+@import url(../blocks/subtitle/subtitle.css);
 
 @import url(../blocks/header/header.css);
 
+@import url(../blocks/club/club.css);
