--- a/blocks/button/button.scss
+++ b/blocks/button/button.scss
@@ -13,19 +13,20 @@
   color: var(--text-color);
 
   transition: all 0.2s ease-in-out;
-}
 
-.button:hover {
-  cursor: pointer;
-  background-color: var(--button-hover-color);
-}
+  &:hover {
+    cursor: pointer;
+    background-color: var(--button-hover-color);
+  }
 
-@media screen and (max-width: 540px) {
-  .button {
-    min-width: 140px;
-    min-height: 30px;
-
-    font-size: 10px;
-    line-height: 1.8;
+  @media screen and (max-width: 540px) {
+    & {
+      min-width: 140px;
+      min-height: 30px;
+  
+      font-size: 10px;
+      line-height: 1.8;
+    }
   }
 }
+
