--- a/blocks/club/club.css
+++ b/blocks/club/club.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   margin: 0 auto;
   min-height: 640px;
-  max-width: 1080px;
+  max-width: 1120px;
 }
 .club__icon {
   display: flex;
@@ -24,6 +24,12 @@
   line-height: 0.9;
   text-transform: uppercase;
   color: var(--text-color);
+}
+.club__title {
+  margin-top: 70px;
+}
+.club__subtitle {
+  margin-top: 40px;
 }
 .club__chessboard {
   margin-top: auto;
@@ -46,6 +52,10 @@
     padding: 40px 0 20px;
     background: no-repeat right 20px top 40px url(../../images/picture_4.png) var(--bg-color-club);
   }
+  .club__container {
+    margin: 0 20px;
+    min-height: 430px;
+  }
   .club__icon {
     margin-top: 10px;
     width: 63px;
@@ -53,9 +63,11 @@
     border-radius: 0 20px 20px 0;
     font-size: 12px;
   }
-  .club__container {
-    margin: 0 20px;
-    min-height: 430px;
+  .club__title {
+    margin-top: 60px;
+  }
+  .club__subtitle {
+    margin-top: 20px;
   }
   .club__chessboard {
     width: 280px;
