--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -28,10 +28,10 @@
     color: var(--text-color);
 
     transition: all 0.2s ease-in-out;
-  }
 
-  &__link:hover {
-    opacity: 0.6;
+    &:hover {
+      opacity: 0.6;
+    }
   }
 
   &__icon-link {
