--- a/blocks/subtitle/subtitle.css
+++ b/blocks/subtitle/subtitle.css
@@ -1,5 +1,5 @@
 .subtitle {
-  margin: 40px 0 0;
+  margin: 0;
   max-width: 500px;
   font-style: normal;
   font-weight: normal;
@@ -9,7 +9,6 @@
 }
 @media screen and (max-width: 540px) {
   .subtitle {
-    margin-top: 20px;
     font-size: 12px;
   }
 }/*# sourceMappingURL=subtitle.css.map */
