--- a/blocks/subtitle/subtitle.scss
+++ b/blocks/subtitle/subtitle.scss
@@ -1,5 +1,5 @@
 .subtitle {
-  margin: 40px 0 0;
+  margin: 0;
   max-width: 500px;
 
   font-style: normal;
@@ -10,7 +10,6 @@
 
   @media screen and (max-width: 540px) {
     & {
-      margin-top: 20px;
       font-size: 12px;
     }
   }
