--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,6 +1,6 @@
 .title {
-  margin: 70px 0 0;
-  max-width: 600px;
+  margin: 0;
+  max-width: 500px;
   font-style: normal;
   font-weight: 600;
   font-size: 70px;
@@ -9,7 +9,6 @@
 }
 @media screen and (max-width: 540px) {
   .title {
-    margin-top: 60px;
     font-size: 40px;
   }
 }/*# sourceMappingURL=title.css.map */
