--- a/blocks/title/title.scss
+++ b/blocks/title/title.scss
@@ -1,6 +1,6 @@
 .title {
-  margin: 70px 0 0;
-  max-width: 600px;
+  margin: 0;
+  max-width: 500px;
 
   font-style: normal;
   font-weight: 600;
@@ -10,7 +10,6 @@
 
   @media screen and (max-width: 540px) {
     & {
-      margin-top: 60px;
       font-size: 40px;
     }
   }
