--- a/pages/index.css
+++ b/pages/index.css
@@ -6,7 +6,11 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/title/title.css);
 @import url(../blocks/subtitle/subtitle.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/slider/slider.css);
 
 @import url(../blocks/header/header.css);
 
 @import url(../blocks/club/club.css);
+
+@import url(../blocks/team/team.css);
