--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,6 +10,7 @@
   --bg-color-header: #000;
   --bg-color-club: #000;
   --bg-color-team: #5036e6;
+  --bg-color-battle: #000;
   --text-color: #fff;
   --button-color: #009465;
   --button-hover-color: #066C4C;
