--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -1,7 +1,3 @@
-.slider {
-  /* Checked */
-  /* Switch */
-}
 .slider__input {
   display: none;
 }
@@ -37,13 +33,22 @@
     justify-content: center;
   }
 }
-.slider__input_btn1:checked ~ .slider__switch .slider__switch-item[for=btn1] {
+.slider__input_btn1:checked ~ .slider__switch .slider__switch-item[for=team-btn1] {
   opacity: 1;
 }
-.slider__input_btn2:checked ~ .slider__switch .slider__switch-item[for=btn2] {
+.slider__input_btn2:checked ~ .slider__switch .slider__switch-item[for=team-btn2] {
   opacity: 1;
 }
-.slider__input_btn3:checked ~ .slider__switch .slider__switch-item[for=btn3] {
+.slider__input_btn3:checked ~ .slider__switch .slider__switch-item[for=team-btn3] {
+  opacity: 1;
+}
+.slider__input_btn1:checked ~ .slider__switch .slider__switch-item[for=battle-btn1] {
+  opacity: 1;
+}
+.slider__input_btn2:checked ~ .slider__switch .slider__switch-item[for=battle-btn2] {
+  opacity: 1;
+}
+.slider__input_btn3:checked ~ .slider__switch .slider__switch-item[for=battle-btn3] {
   opacity: 1;
 }
 .slider__input_btn1:checked ~ .slider__items .cards {
