feat(footer): add footer

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -11,7 +11,9 @@
   --bg-color-club: #000;
   --bg-color-team: #5036e6;
   --bg-color-battle: #000;
+  --bg-color-footer: #5036e6;
   --text-color: #fff;
+  --copy-color: #8E9199;
   --button-color: #009465;
   --button-hover-color: #066C4C;
 }/*# sourceMappingURL=page.css.map */
