--- a/blocks/battle/battle.css
+++ b/blocks/battle/battle.css
@@ -35,6 +35,9 @@
     margin-top: 140px;
     margin-right: -50px;
   }
+  .battle__chessboard {
+    margin-top: 140px;
+  }
 }
 @media screen and (max-width: 540px) {
   .battle {
@@ -43,6 +46,9 @@
   }
   .battle__container {
     margin: 0 20px;
+  }
+  .battle__subtitle {
+    margin-top: 20px;
   }
   .battle__slider {
     margin-top: 60px;
