--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
-  max-width: 1080px;
+  max-width: 1120px;
 }
 .header__logo {
   height: 54px;
@@ -51,6 +51,9 @@
   }
 }
 @media screen and (max-width: 540px) {
+  .header {
+    padding-top: 16px;
+  }
   .header__container {
     margin: 0 20px;
   }
