--- a/blocks/team/team.scss
+++ b/blocks/team/team.scss
@@ -29,7 +29,7 @@
     justify-content: center;
 
     margin: 140px 0 0 auto;
-    padding-left: 660px;
+    padding-left: 600px;
     min-height: 440px;
   }
 
@@ -50,7 +50,7 @@
 
     &__join {
       margin-top: 100px;
-      padding-left: 150px;
+      padding-left: 190px;
       min-height: 360px;
     }
   }
@@ -63,6 +63,10 @@
 
     &__container {
       margin: 0 20px;
+    }
+
+    &__subtitle {
+      margin-top: 20px;
     }
 
     &__slider {
