--- a/blocks/page/page.scss
+++ b/blocks/page/page.scss
@@ -8,6 +8,7 @@
 }
 
 :root {
+  // Цвета
   --bg-color-header: #000;
   --bg-color-club: #000;
   --bg-color-team: #5036e6;
@@ -21,4 +22,9 @@
   --input-color: #1A1A1A;
   --input-hover-color: #1A1A1A99;
   --input-focus: #5036e6;
+
+  // Отступы
+  --desktop-margin: auto;
+  --tablet-margin: 50px;
+  --mobile-margin: 20px;
 }
