--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -1,15 +1,11 @@
 .slider__input {
   display: none;
 }
-.slider__items {
-  overflow-x: scroll;
-}
-.slider__items::-webkit-scrollbar {
-  height: 0;
-}
 .slider__switch {
   display: none;
-  margin-top: 30px;
+  margin: 30px 0 0;
+  padding: 0;
+  list-style-type: none;
 }
 .slider__switch-item {
   cursor: pointer;
@@ -20,43 +16,16 @@
   background-color: var(--text-color);
   opacity: 0.2;
 }
+.slider__switch-item_active {
+  opacity: 1;
+}
 @media screen and (max-width: 540px) {
   .slider {
     margin: 0 auto;
     max-width: 280px;
   }
-  .slider__items {
-    overflow: hidden;
-  }
   .slider__switch {
     display: flex;
     justify-content: center;
   }
-}
-.slider__input_btn1:checked ~ .slider__switch .slider__switch-item[for=team-btn1] {
-  opacity: 1;
-}
-.slider__input_btn2:checked ~ .slider__switch .slider__switch-item[for=team-btn2] {
-  opacity: 1;
-}
-.slider__input_btn3:checked ~ .slider__switch .slider__switch-item[for=team-btn3] {
-  opacity: 1;
-}
-.slider__input_btn1:checked ~ .slider__switch .slider__switch-item[for=battle-btn1] {
-  opacity: 1;
-}
-.slider__input_btn2:checked ~ .slider__switch .slider__switch-item[for=battle-btn2] {
-  opacity: 1;
-}
-.slider__input_btn3:checked ~ .slider__switch .slider__switch-item[for=battle-btn3] {
-  opacity: 1;
-}
-.slider__input_btn1:checked ~ .slider__items .cards {
-  transform: translate(0);
-}
-.slider__input_btn2:checked ~ .slider__items .cards {
-  transform: translateX(-306px);
-}
-.slider__input_btn3:checked ~ .slider__items .cards {
-  transform: translateX(-612px);
 }/*# sourceMappingURL=slider.css.map */
