--- a/blocks/battle/battle.scss
+++ b/blocks/battle/battle.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
 
-    margin: 0 auto;
+    margin: 0 var(--desktop-margin);
     max-width: 1120px;
   }
 
@@ -36,7 +36,7 @@
     }
 
     &__container {
-      margin: 0 50px;
+      margin: 0 var(--tablet-margin);
     }
 
     &__slider {
@@ -69,7 +69,7 @@
     }
 
     &__container {
-      margin: 0 20px;
+      margin: 0 var(--mobile-margin);
     }
 
     &__subtitle {
