--- a/blocks/club/club.css
+++ b/blocks/club/club.css
@@ -5,7 +5,7 @@
 .club__container {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0 var(--desktop-margin);
   min-height: 650px;
   max-width: 1120px;
 }
@@ -43,7 +43,7 @@
     background: no-repeat right 0 bottom 50px url(../../images/picture_3.png) var(--bg-color-club);
   }
   .club__container {
-    margin: 0 50px;
+    margin: 0 var(--tablet-margin);
     min-height: 680px;
   }
 }
@@ -53,7 +53,7 @@
     background: no-repeat right 20px top 40px url(../../images/picture_4.png) var(--bg-color-club);
   }
   .club__container {
-    margin: 0 20px;
+    margin: 0 var(--mobile-margin);
     min-height: 430px;
   }
   .club__icon {
