--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between;
 
-    margin: 0 auto;
+    margin: 0 var(--desktop-margin);
     max-width: 1120px;
   }
 
@@ -43,7 +43,7 @@
 
   @media screen and (max-width: 1140px) { 
     &__container {
-      margin: 0 50px;
+      margin: 0 var(--tablet-margin);
     }
     
     &__link {
@@ -68,7 +68,7 @@
     }
 
     &__container {
-      margin: 0 20px;
+      margin: 0 var(--mobile-margin);
     }
 
     &__logo {
